[gd_scene load_steps=6 format=3 uid="uid://b74an6r6spol5"]

[ext_resource type="Script" path="res://main/main.gd" id="1_jaxmp"]
[ext_resource type="PackedScene" uid="uid://b1jsyt84leyom" path="res://ui/temporal_graph/temporal_graph_pack.tscn" id="2_gjnnv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvnq8"]
bg_color = Color(0.32549, 0.32549, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2qh7"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 1
border_color = Color(0, 0, 0, 0.619608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eap0f"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 1
border_color = Color(0, 0, 0, 0.619608)

[node name="SpectrumViewer" type="Node"]
script = ExtResource("1_jaxmp")
clarity_threshold = 0.4

[node name="Button" type="Button" parent="."]
offset_right = 79.0
offset_bottom = 29.0
text = "Click me!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = 4.0
autoplay = true
bus = &"Record"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TemporalGraphPack" parent="VBoxContainer" instance=ExtResource("2_gjnnv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
time_length = 4.0

[node name="Controls" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jvnq8")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="CheckBoxes1" type="PanelContainer" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k2qh7")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/CheckBoxes1"]
layout_mode = 2

[node name="ShowOctavesCb" type="CheckBox" parent="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "show octaves"

[node name="ShowNotesCb" type="CheckBox" parent="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "show notes"

[node name="ClarityThrContainer" type="PanelContainer" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eap0f")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
alignment = 2

[node name="VolumeThrSlider" type="HSlider" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VolumeThresholdValue" type="Label" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2"]
layout_mode = 2
text = "Volume Threshold"
horizontal_alignment = 1

[node name="ClarityThrSlider" type="HSlider" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="ClarityThresholdValue" type="Label" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2"]
layout_mode = 2
text = "Clarity Threshold"
horizontal_alignment = 1

[node name="TestAudioContainer" type="PanelContainer" parent="VBoxContainer/Controls/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eap0f")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 2

[node name="EnableTestAudio" type="CheckButton" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "insturment"

[node name="TInstrumentOptionButton" type="OptionButton" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "sound"

[node name="TAudioOptionButton" type="OptionButton" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer"]
layout_mode = 2
text = "Test Audio
"
horizontal_alignment = 1

[connection signal="toggled" from="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer/ShowOctavesCb" to="." method="_on_show_octaves_cb_toggled"]
[connection signal="toggled" from="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer/ShowNotesCb" to="." method="_on_show_notes_cb_toggled"]
[connection signal="value_changed" from="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2/VolumeThrSlider" to="." method="_on_volume_thr_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Controls/HBoxContainer/ClarityThrContainer/VBoxContainer2/ClarityThrSlider" to="." method="_on_clarity_thr_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/EnableTestAudio" to="." method="_on_enable_test_audio_toggled"]
[connection signal="item_selected" from="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/HBoxContainer2/TInstrumentOptionButton" to="." method="_on_t_instrument_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Controls/HBoxContainer/TestAudioContainer/VBoxContainer/HBoxContainer/TAudioOptionButton" to="." method="_on_t_audio_option_button_item_selected"]
